--- a/cv.html
+++ b/cv.html
@@ -12,6 +12,7 @@
     .nav-name{font-family:'DM Mono',monospace;color:#2c4a8c;text-transform:uppercase;font-weight:700}
     nav ul{margin-left:auto;display:flex;gap:1.2rem;list-style:none;padding:0}
     nav a{font-family:'DM Mono',monospace;color:#5a6380;text-decoration:none;font-size:0.9rem}
+    nav a.active{color:#2c4a8c;font-weight:700}
     .viewer{margin-top:1.2rem}
     iframe{width:100%;height:80vh;border:1px solid rgba(0,0,0,0.06);border-radius:6px}
     .fallback{margin-top:0.6rem;font-family:'DM Mono',monospace;color:#5a6380}
@@ -23,7 +24,7 @@
     <nav>
       <div class="nav-name">Jinjing Chen</div>
       <ul>
-        <li><a href="index.html">About</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="research.html">Research</a></li>
         <li><a href="experience.html">Experience</a></li>
         <li><a href="teaching.html">Teaching</a></li>
