--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     .nav-name{font-family:'DM Mono',monospace;color:var(--blue);text-transform:uppercase;font-weight:700}
     nav ul{margin-left:auto;display:flex;gap:1.2rem;list-style:none;padding:0}
     nav a{font-family:'DM Mono',monospace;color:var(--muted);text-decoration:none;font-size:0.9rem}
+    nav a.active{color:var(--blue);font-weight:700}
 
     header{display:grid;grid-template-columns:360px 1fr;gap:2rem;align-items:center;padding:4rem 0}
     .hero-photo{width:100%;height:auto;border-radius:6px;object-fit:cover;display:block;border:1px solid rgba(12,16,30,0.06);box-shadow:0 12px 40px rgba(12,16,30,0.08)}
@@ -34,6 +35,7 @@
     <nav>
       <div class="nav-name">Jinjing Chen</div>
       <ul>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="research.html">Research</a></li>
         <li><a href="experience.html">Experience</a></li>
         <li><a href="teaching.html">Teaching</a></li>
