--- a/research.html
+++ b/research.html
@@ -74,6 +74,7 @@
     }
 
     nav a:hover { color: var(--blue); transform: translateY(-1px); }
+    nav a.active { color: var(--blue); font-weight:700; }
 
     /* ── Sections ── */
     section {
@@ -214,7 +215,8 @@
       <span class="nav-name">Jinjing Chen</span>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="research.html">Research</a></li>
+        <li><a href="research.html" class="active">Research</a></li>
+        <li><a href="experience.html">Experience</a></li>
         <li><a href="teaching.html">Teaching</a></li>
       </ul>
     </div>
