--- a/teaching.html
+++ b/teaching.html
@@ -17,6 +17,7 @@
     nav ul { list-style: none; display: flex; gap: 1.4rem; margin-left: auto; }
     nav a { font-family: 'DM Mono', monospace; font-size: 0.78rem; letter-spacing: 0.08em; text-transform: uppercase; color: var(--muted); text-decoration: none; transition: color 0.18s, transform 0.12s; padding: 0.2rem 0.1rem; }
     nav a:hover { color: var(--blue); transform: translateY(-1px); }
+    nav a.active { color: var(--blue); font-weight:700; }
     section { padding: 3rem 0; border-bottom: 1px solid rgba(12,16,30,0.04); animation: fadeUp 0.8s ease both; }
     .section-header { display: flex; align-items: baseline; gap: 1.2rem; margin-bottom: 2rem; }
     h2 { font-size: 1.05rem; font-weight: 500; letter-spacing: 0.02em; }
@@ -32,7 +33,8 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="research.html">Research</a></li>
-        <li><a href="teaching.html">Teaching</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="teaching.html" class="active">Teaching</a></li>
       </ul>
     </div>
   </nav>
