--- a/index.html
+++ b/index.html
@@ -18,14 +18,20 @@
         <li><a href="teaching.html">Teaching</a></li>
       </ul>
     </nav>
-
     <header>
       <img class="hero-photo" src="Images/Linkinpic.jpg" alt="Jinjing Chen">
       <div>
         <div class="hero-label">About me</div>
         <h1>Jinjing <em>Chen</em></h1>
-        <p class="hero-sub">I study how environmental and energy policy affect welfare — with a focus on vehicle markets, electric vehicles, and the consequences of agricultural burning. My research interests include applied microeconomics, environmental policy evaluation, and remote sensing applications in economics.</p>
-        <a class="cv-btn" href="cv.html">CV</a>
+        <p class="hero-sub">
+      I am a Ph.D. candidate in Economics at the University of Melbourne, supervised by Dr. Leslie Martin, Dr. Sebastian Tebbe, and Dr. Kathryn Baragwanath. My research is in environmental and energy economics, with a focus on environmental policy, transportation markets, and air pollution.
+      I study how transportation and climate policies affect environmental outcomes and welfare. My work combines applied econometrics with atmospheric transport modeling to quantify the environmental and distributional impacts of electric vehicle adoption. I examine how vehicle policy design shapes market behavior—drawing on evidence from Sweden—and use high-resolution satellite data and remote sensing to measure real-world environmental impacts, including those arising from agricultural burning, air pollution exposure, and their consequences for road safety and traffic accidents.
+      More broadly, my research integrates causal inference with environmental science models to improve the measurement of policy impacts on environmental quality and human welfare.
+        </p>
+        <div class="hero-links">
+          <a class="email-btn" href="mailto:Jinjingc2@unimelb.edu.au">Email</a>
+          <a class="cv-btn" href="cv.html" target="_blank">CV</a>
+        </div>
       </div>
     </header>
 
