--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         </p>
         <div class="hero-links">
           <a class="email-btn" href="mailto:Jinjingc2@unimelb.edu.au">Email</a>
-          <a class="cv-btn" href="cv.html" target="_blank">CV</a>
+        </div>
+        <div class="hero-links">
+          <a class="cv-btn" href="cv.html" target="_blank">Download CV</a>
         </div>
       </div>
     </header>
