--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
       More broadly, my research integrates causal inference with environmental science models to improve the measurement of policy impacts on environmental quality and human welfare.
         </p>
         <div class="hero-links">
-          <a class="email-btn" href="mailto:Jinjingc2@unimelb.edu.au">Email</a>
-        </div>
-        <div class="hero-links">
+          <a class="email-btn" href="mailto:Jinjingc2@unimelb.edu.au">Email</a><br>
           <a class="cv-btn" href="cv.html" target="_blank">Download CV</a>
         </div>
       </div>
