--- a/experience.html
+++ b/experience.html
@@ -34,7 +34,7 @@
         <div>
           <div class="exp-role">Short-term Consultant (DEC Planet)</div>
           <div class="exp-org">World Bank Group — Washington, DC, United States (Remote)</div>
-          <div class="exp-desc">Apply high-resolution PlanetScope imagery to generate near-real-time environmental monitoring insights.</div>
+          <div class="exp-desc">Apply high-resolution PlanetScope data to generate near-real-time environmental monitoring insights.</div>
         </div>
       </div>
       
