--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
         <div class="hero-label">About me</div>
         <h1>Jinjing <em>Chen</em></h1>
         <p class="hero-sub">
-      I am a Ph.D. candidate in Economics at the University of Melbourne, supervised by Dr. Leslie Martin, Dr. Sebastian Tebbe, and Dr. Kathryn Baragwanath. My research is in environmental and energy economics, with a focus on environmental policy, transportation markets, and air pollution.
-      I study how transportation and climate policies affect environmental outcomes and welfare. My work combines applied econometrics with atmospheric transport modeling to quantify the environmental and distributional impacts of electric vehicle adoption. I examine how vehicle policy design shapes market behavior—drawing on evidence from Sweden—and use high-resolution satellite data and remote sensing to measure real-world environmental impacts, including those arising from agricultural burning, air pollution exposure, and their consequences for road safety and traffic accidents.
-      More broadly, my research integrates causal inference with environmental science models to improve the measurement of policy impacts on environmental quality and human welfare.
+      I am a Ph.D. candidate in Economics at the University of Melbourne, supervised by Dr. Leslie Martin, Dr. Kathryn Baragwanath, and Dr. Sebastian Tebbe. My research is in environmental and energy economics, with a focus on environmental policy, transportation sectors, and remote sensing.
+        </p>
+        <p class="hero-sub">
+      I study how climate policies in transporation sector affect environmental outcomes and soical welfare. My work combines applied econometrics with atmospheric transport modeling to quantify the environmental and distributional impacts of electric vehicle adoption. I also examine how vehicle policy design shapes market behavior, drawing on evidence from Sweden.
+        <p class="hero-sub">
+      In addition, I combine different sources of high-resolution satellite imagery to quantify real-world environmental impacts, including agricultural burning, air pollution exposure, and traffic safety outcomes.
+        </p>
+        <p class="hero-sub">
+      I am currently working closely with the Government of Pakistan to help policymakers address environmental issues such as crop-residue burning by improving the existing fire monitoring system.
         </p>
         <div class="hero-links">
           <span>Email: Jinjingc2@unimelb.edu.au</span><br>
