--- a/research.html
+++ b/research.html
@@ -55,13 +55,30 @@
         <div class="paper">
           <div class="paper-title">Anticipation Effects in Vehicle Markets: Evidence from Swedish Feebate Systems</div>
           <div class="paper-byline">with Sebastian Tebbe &amp; Stephanie Weber</div>
-          <div class="paper-abstract">Abstract: (to be added)</div>
+          <div class="paper-abstract">Abstract: We study anticipatory behavior in response to Sweden’s vehicle feebate policy. 
+            Using administrative data on vehicle registrations linked to individual and firm characteristics, we document anticipation effects that are largely driven by intertemporal substitution but also lead to excess vehicle adoption. 
+            Vehicles adopted ahead of implementation are systematically dirtier and subsequently driven more intensively, amplifying the environmental damages of the policy announcement. 
+            Anticipatory adoption is most pronounced where anticipation is easiest or policy compliance is most challenging: in particular, dealer stock-management strategies, household and firm liquidity, and information salience all increase anticipatory purchases, while access to charging infrastructure shifts post-policy vehicle purchases towards green cars. 
+            We quantify the environmental implications of anticipatory behavior, accounting for excess adoption, the higher emissions intensity of vehicles purchased in anticipation, and their more intensive subsequent usage. 
+            Ultimately, the environmental costs of the anticipatory behavior amount to approximately $40 million, or around 34 percent of the budget allocated to the policy in 2019.</div>
         </div>
 
         <div class="paper">
           <div class="paper-title">The Heterogeneous Environmental Benefits of Electric Vehicles in China</div>
           <div class="paper-byline">with Leslie Martin</div>
-          <div class="paper-abstract">Abstract: (to be added)</div>
+          <div class="paper-abstract">Abstract: This paper quantifies some of the distributional effects of electric vehicle (EV) adoption in China, the largest global
+EV market. Electric Vehicles (EVs) are vital for decarbonizing transportation; however, their adoption increases
+emissions from electricity generation in fossil fuel-dependent grids like China’s. Using satellite data, we estimate
+monthly PM<sub>2.5</sub> concentrations attributable to coal-fired power plants and apply an econometric model to calculate
+marginal emission factors at the provincial-plant level. We then use an air circulation model to measure EV-related pollution
+in downwind counties. We find that EV adoption in Northeast China significantly increases population exposure
+to PM<sub>2.5</sub> levels, whereas downwind impacts are smaller when EVs are charged in the Central provinces. In Beijing,
+one of the cities with the greatest concentration of EVs, redistribution of PM<sub>2.5</sub> damages from urban to downwind
+counties predominantly affects populations in lower-income counties. Finally, we provide suggestive evidence that
+the delayed rollout of market reforms in China’s electricity has contributed to a non-negligeable share of the cost
+of pollution in the Northeast. Our results highlight the risk that in the shift to EVs disadvantaged peri-urban areas
+may bear a disproportionate burden of pollution, while residents in more developed cities disproportionally benefit,
+raising concerns over environmental justice</div>
         </div>
 
         <div class="paper">
