--- a/index.html
+++ b/index.html
@@ -6,8 +6,311 @@
   <title>Jinjing Chen — About</title>
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;1,400&family=DM+Mono:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css">
+
+  <style>
+    /* ══════════════════════════════════════
+       VIDEO BACKGROUND
+    ══════════════════════════════════════ */
+    #video-bg {
+      position: fixed;
+      inset: 0;
+      z-index: 0;
+      overflow: hidden;
+      /* Deep space fallback color while video loads */
+      background: #020d1a;
+    }
+
+    #bg-video {
+      position: absolute;
+      /* Center and cover the entire viewport */
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      object-fit: cover;
+    }
+
+    /* Gradient overlay: darkens edges so text is readable */
+    #video-bg::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background:
+        /* vignette */
+        radial-gradient(ellipse at center, transparent 20%, rgba(2,13,26,0.78) 100%),
+        /* top/bottom darkening */
+        linear-gradient(
+          to bottom,
+          rgba(2,13,26,0.60) 0%,
+          rgba(2,13,26,0.10) 35%,
+          rgba(2,13,26,0.10) 65%,
+          rgba(2,13,26,0.65) 100%
+        );
+      pointer-events: none;
+      z-index: 2;
+    }
+
+    /* ══════════════════════════════════════
+       BASE STYLES
+    ══════════════════════════════════════ */
+    *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
+
+    body {
+      font-family: 'EB Garamond', Georgia, serif;
+      color: #e8e2d6;
+      min-height: 100vh;
+      background: transparent;
+    }
+
+    /* ══════════════════════════════════════
+       LAYOUT
+    ══════════════════════════════════════ */
+    .wrapper {
+      position: relative;
+      z-index: 10;
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 0 2rem;
+    }
+
+    /* ══════════════════════════════════════
+       NAV
+    ══════════════════════════════════════ */
+    nav {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 2rem 0 1.5rem;
+      border-bottom: 1px solid rgba(232,226,214,0.13);
+    }
+
+    .nav-name {
+      font-family: 'EB Garamond', serif;
+      font-size: 1.1rem;
+      font-weight: 500;
+      letter-spacing: 0.04em;
+      color: #e8e2d6;
+    }
+
+    nav ul { list-style: none; display: flex; gap: 2rem; }
+
+    nav ul a {
+      font-family: 'DM Mono', monospace;
+      font-size: 0.75rem;
+      font-weight: 300;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      color: rgba(232,226,214,0.55);
+      text-decoration: none;
+      transition: color 0.2s;
+    }
+
+    nav ul a:hover { color: #e8e2d6; }
+
+    nav ul a.active {
+      color: #e8e2d6;
+      border-bottom: 1px solid rgba(232,226,214,0.45);
+      padding-bottom: 2px;
+    }
+
+    /* ══════════════════════════════════════
+       HERO
+    ══════════════════════════════════════ */
+    header {
+      display: grid;
+      grid-template-columns: 200px 1fr;
+      gap: 3.5rem;
+      padding: 4rem 0 3rem;
+      align-items: start;
+    }
+
+    .hero-photo {
+      width: 100%;
+      aspect-ratio: 3/4;
+      object-fit: cover;
+      border-radius: 2px;
+      box-shadow:
+        0 0 0 1px rgba(232,226,214,0.1),
+        0 16px 60px rgba(0,0,0,0.85);
+      filter: sepia(8%) contrast(1.04);
+    }
+
+    .hero-label {
+      font-family: 'DM Mono', monospace;
+      font-size: 0.67rem;
+      letter-spacing: 0.16em;
+      text-transform: uppercase;
+      color: rgba(232,226,214,0.35);
+      margin-bottom: 0.6rem;
+    }
+
+    h1 {
+      font-family: 'EB Garamond', serif;
+      font-size: clamp(2.4rem, 5vw, 3.2rem);
+      font-weight: 400;
+      line-height: 1.05;
+      color: #f2ede4;
+      margin-bottom: 0.6rem;
+    }
+
+    h1 em { font-style: italic; color: #c9b97a; }
+
+    /* Live video badge */
+    .data-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.45rem;
+      font-family: 'DM Mono', monospace;
+      font-size: 0.59rem;
+      letter-spacing: 0.13em;
+      text-transform: uppercase;
+      color: rgba(201,185,122,0.6);
+      margin-bottom: 1.5rem;
+    }
+
+    .data-badge .dot {
+      width: 5px; height: 5px;
+      border-radius: 50%;
+      background: #c9b97a;
+      flex-shrink: 0;
+      animation: blink 2.4s ease-in-out infinite;
+    }
+
+    @keyframes blink {
+      0%, 100% { opacity: 1;    box-shadow: 0 0 5px rgba(201,185,122,0.7); }
+      50%       { opacity: 0.2; box-shadow: none; }
+    }
+
+    .hero-sub {
+      font-size: 1.05rem;
+      line-height: 1.8;
+      color: rgba(232,226,214,0.82);
+      margin-bottom: 1rem;
+      max-width: 58ch;
+    }
+
+    .hero-links {
+      margin-top: 1.8rem;
+      font-family: 'DM Mono', monospace;
+      font-size: 0.78rem;
+      color: rgba(232,226,214,0.48);
+      line-height: 2;
+    }
+
+    .cv-btn {
+      display: inline-block;
+      margin-top: 0.5rem;
+      padding: 0.5rem 1.2rem;
+      border: 1px solid rgba(201,185,122,0.38);
+      color: #c9b97a;
+      text-decoration: none;
+      font-family: 'DM Mono', monospace;
+      font-size: 0.72rem;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      transition: background 0.25s, border-color 0.25s, color 0.25s;
+    }
+
+    .cv-btn:hover {
+      background: rgba(201,185,122,0.1);
+      border-color: rgba(201,185,122,0.7);
+      color: #ddd080;
+    }
+
+    /* ══════════════════════════════════════
+       CREDIT TAG (bottom left)
+    ══════════════════════════════════════ */
+    .video-credit {
+      position: fixed;
+      bottom: 1.2rem;
+      left: 1.4rem;
+      z-index: 20;
+      font-family: 'DM Mono', monospace;
+      font-size: 0.55rem;
+      color: rgba(232,226,214,0.25);
+      letter-spacing: 0.09em;
+      text-transform: uppercase;
+      pointer-events: none;
+      line-height: 1.8;
+    }
+
+    /* ══════════════════════════════════════
+       FOOTER
+    ══════════════════════════════════════ */
+    footer {
+      position: relative;
+      z-index: 10;
+      text-align: center;
+      padding: 2.5rem 2rem;
+      font-family: 'DM Mono', monospace;
+      font-size: 0.62rem;
+      letter-spacing: 0.1em;
+      color: rgba(232,226,214,0.18);
+      border-top: 1px solid rgba(232,226,214,0.06);
+      margin-top: 2rem;
+    }
+
+    /* ══════════════════════════════════════
+       RESPONSIVE
+    ══════════════════════════════════════ */
+    @media (max-width: 640px) {
+      header { grid-template-columns: 1fr; gap: 2rem; }
+      .hero-photo { width: 140px; aspect-ratio: 1; border-radius: 50%; }
+      nav ul { gap: 1rem; }
+      nav ul a { font-size: 0.68rem; }
+    }
+  </style>
 </head>
 <body>
+
+  <!-- ══ NASA Satellite Video Background ══ -->
+  <!--
+    Video: "Earth from Orbit" — NASA Scientific Visualization Studio
+    Source: https://svs.gsfc.nasa.gov/12118
+    License: NASA public domain (free to use)
+
+    HOW TO USE YOUR OWN VIDEO FILE:
+    1. Download an MP4 from NASA SVS: https://svs.gsfc.nasa.gov
+    2. Place the file in your repo (e.g. assets/earth.mp4)
+    3. Change the <source src="..."> below to your local path
+       e.g. <source src="assets/earth.mp4" type="video/mp4">
+  -->
+  <div id="video-bg">
+    <video
+      id="bg-video"
+      autoplay
+      muted
+      loop
+      playsinline
+      poster="https://svs.gsfc.nasa.gov/vis/a000000/a004800/a004882/c-1280.jpg"
+    >
+      <!-- Primary: DSCOVR EPIC Earth timelapse (NASA SVS #12118) -->
+      <source
+        src="https://svs.gsfc.nasa.gov/vis/a000000/a004800/a004882/DSCOVR_EPIC_2015_247-300_1080p30.mp4"
+        type="video/mp4"
+      >
+      <!--
+        FALLBACK OPTIONS — uncomment one if the above doesn't load:
+
+        Option A: Earth from Orbit 2014 (smaller file ~17MB)
+        <source src="https://svs.gsfc.nasa.gov/vis/a000000/a011000/a011858/Earth_from_Orbit_2014_ipod_sm.mp4" type="video/mp4">
+
+        Option B: Host locally (RECOMMENDED for production)
+        Download from NASA SVS and add to your repo:
+        <source src="assets/earth-timelapse.mp4" type="video/mp4">
+      -->
+    </video>
+  </div>
+
+  <!-- Credit -->
+  <div class="video-credit">
+    Video: DSCOVR EPIC · NASA SVS · Public Domain
+  </div>
+
+  <!-- ══ Page Content ══ -->
   <div class="wrapper">
     <nav>
       <div class="nav-name">Jinjing Chen</div>
@@ -18,21 +321,29 @@
         <li><a href="teaching.html">Teaching</a></li>
       </ul>
     </nav>
+
     <header>
       <img class="hero-photo" src="Images/Linkinpic.jpg" alt="Jinjing Chen">
       <div>
         <div class="hero-label">About me</div>
         <h1>Jinjing <em>Chen</em></h1>
+
+        <div class="data-badge">
+          <span class="dot"></span>
+          NASA DSCOVR EPIC · Earth from Space
+        </div>
+
         <p class="hero-sub">
-      I am a Ph.D. candidate in Economics at the University of Melbourne, supervised by Dr. Leslie Martin, Dr. Kathryn Baragwanath, and Dr. Sebastian Tebbe. My research is in environmental and energy economics, with a focus on environmental policy, transportation sectors, and remote sensing.
+          I am a Ph.D. candidate in Economics at the University of Melbourne, supervised by Dr. Leslie Martin, Dr. Kathryn Baragwanath, and Dr. Sebastian Tebbe. My research is in environmental and energy economics, with a focus on environmental policy, transportation sectors, and remote sensing.
         </p>
         <p class="hero-sub">
-      I study how climate policies in transporation sector affect environmental outcomes and soical welfare. My work combines applied econometrics with atmospheric transport modeling to quantify the environmental and distributional impacts of electric vehicle adoption. I also examine how vehicle policy design shapes market behavior, drawing on evidence from Sweden.
-        <p class="hero-sub">
-      In addition, I combine different sources of high-resolution satellite imagery to quantify real-world environmental impacts, including agricultural burning, air pollution exposure, and traffic safety outcomes.
+          I study how climate policies in the transportation sector affect environmental outcomes and social welfare. My work combines applied econometrics with atmospheric transport modeling to quantify the environmental and distributional impacts of electric vehicle adoption. I also examine how vehicle policy design shapes market behavior, drawing on evidence from Sweden.
         </p>
         <p class="hero-sub">
-      I am currently working closely with the Government of Pakistan to help policymakers address environmental issues such as crop-residue burning by improving the existing fire monitoring system.
+          In addition, I combine different sources of high-resolution satellite imagery to quantify real-world environmental impacts, including agricultural burning, air pollution exposure, and traffic safety outcomes.
+        </p>
+        <p class="hero-sub">
+          I am currently working closely with the Government of Pakistan to help policymakers address environmental issues such as crop-residue burning by improving the existing fire monitoring system.
         </p>
         <div class="hero-links">
           <span>Email: Jinjingc2@unimelb.edu.au</span><br>
@@ -40,11 +351,18 @@
         </div>
       </div>
     </header>
-
   </div>
 
-  <footer>
-    &copy; 2026 Jinjing Chen
-  </footer>
+  <footer>&copy; 2026 Jinjing Chen</footer>
+
+  <script>
+    // Autoplay policy workaround: some browsers block autoplay until user interacts.
+    // This tries to play on first click/touch if video hasn't started.
+    const video = document.getElementById('bg-video');
+    video.play().catch(() => {
+      document.addEventListener('click', () => video.play(), { once: true });
+      document.addEventListener('touchstart', () => video.play(), { once: true });
+    });
+  </script>
 </body>
 </html>
